# koti

./: .gitignore  Cargo.toml  README.md  README.txt  log.txt  log2.txt
src/: context.rs  error.rs  filter.rs  frame.rs  image_size.rs  main.rs  music.rs  reddit_text_source.rs  text2image.rs  util.rs
src/mlt/: filter.rs  mod.rs  playlist.rs  producer.rs  tractor.rs  transition.rs
src/process/: frame.rs  mod.rs  overlay.rs  tts.rs
src/reddit_text_source/: direct_children.rs  mod.rs
src/scp/: metadata.rs  mod.rs
src/thumbnail/: mod.rs  template.rs
src/youtube/: .mod.rs.swp  config.rs  mod.rs  upload_it.rs
youtube3/: Cargo.toml
youtube3/src/: api.rs
