[package]
name = "koti"
version = "0.1.0"
authors = ["not_a_seagull <notaseagull048@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
dirs = "3"
env_logger = { version = "0.8", default-features = false, features = ["atty", "termcolor"] }
event-listener = "2.5"
futures-lite = "1.11"
genawaiter = { version = "0.99", default-features = false }
google-youtube3 = { path = "./youtube3" }
hound = "3.4"
hyper = "0.14"
hyper-rustls = "0.22"
log = "0.4"
nanorand = "0.5.2"
image = "0.23.14"
once_cell = { version = "1.7", features = ["parking_lot"] }
pin-project-lite = "0.2"
quick-xml = "0.22"
regex = "1.5"
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thirtyfour = { version = "0.23.0", features = ["tokio-runtime", "reqwest-rustls-tls"] }
tokio = { version = "1.5", features = ["rt", "rt-multi-thread", "fs", "net", "io-util", "io-std", "parking_lot", "process", "sync"] }
yup-oauth2 = "5.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
